body copy styled

--- a/components/index.html
+++ b/components/index.html
@@ -5,8 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Components | Visuelle</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-    <h1>Web Components Go Here</h1>
+    <h1>Web Components</h1>
+
+    <h2>Typography Defaults</h2>
+
+    <article class="component">
+        <h3 class="component__name">body</h3>
+        <img 
+            srcset="img/page-body__item-text.png 2x"
+            src="img/page-body__item-text.png" alt="body copy"/>
+        <div class="component__code">
+            Code Goes Here
+            <p>
+                <a href="#!">Foundry Æterna</a> <br>
+                <a href="#!">OPX Studio</a>
+            </p>
+        </div>
+    </article>
 </body>
 </html>
