--- a/components/index.html
+++ b/components/index.html
@@ -15,15 +15,32 @@
 
     <article class="component">
         <h3 class="component__name">body</h3>
+        <div class="component__img">
         <img 
             srcset="img/page-body__item-text.png 2x"
             src="img/page-body__item-text.png" alt="body copy"/>
+        </div>
         <div class="component__code">
             Code Goes Here
             <p>
                 <a href="#!">Foundry Æterna</a> <br>
                 <a href="#!">OPX Studio</a>
             </p>
+        </div>
+    </article>
+
+    <article class="component__headings">
+        <h3 class="component__name">headings (h1, h2, ...)</h3>
+        <div class="component__img">
+        <img 
+            srcset="img/page-header__wordmark.png 2x"
+            src="img/page-header__wordmark.png" alt="workmark copy"/>
+        </div>
+        <div class="component__code">
+            Code Goes Here
+            <h1>
+                visuelle.
+            </h1>
         </div>
     </article>
 </body>
