--- a/components/index.html
+++ b/components/index.html
@@ -43,5 +43,27 @@
             </h1>
         </div>
     </article>
+
+    <article class="component__nav">
+        <h3 class="component__name">nav bar</h3>
+        <div class="component__img">
+        <img 
+            srcset="img/page-header__nav.png"
+            src="img/page-header__nav.png" alt="nav bar copy"/>
+        </div>
+        <div class="component__code">
+            Code Goes Here
+            <ul>
+                <li>All</li>
+                <li>Digital</li>
+                <li>Graphic Design</li>
+                <li>Illustration</li>
+                <li>Motion</li>
+                <li>Photography</li>
+                <li>Podcast</li>
+                <li>Typography</li>
+            </ul>
+        </div>
+    </article>
 </body>
 </html>
