Header Buttons Updated

--- a/components/index.html
+++ b/components/index.html
@@ -65,5 +65,24 @@
             </ul>
         </div>
     </article>
+    
+    <article class="component__header-buttons">
+        <h3 class="component__name">header buttons</h3>
+        <div class="component__img">
+        <img
+            srcset="img/page-header__nav-search.png"
+            src="img/page-header__nav-search.png" alt="search button copy"/>
+        <img 
+            srcset="img/page-header__nav-about.png"
+            src="img/page-header__nav-about.png" alt="about button copy"/>
+        </div>
+        <div class="component__code">
+            Code Goes Here
+            <div class="button_header">
+            <p>Search</p>
+            <p>About</p>
+            </div>
+        </div>
+    </article>
 </body>
 </html>
