--- a/components/index.html
+++ b/components/index.html
@@ -11,8 +11,6 @@
 <body>
     <h1>Web Components</h1>
 
-    <h2>Typography Defaults</h2>
-
     <article class="component">
         <h3 class="component__name">body</h3>
         <div class="component__img">
@@ -82,6 +80,25 @@
             <p>Search</p>
             <p>About</p>
             </div>
+        </div>
+    </article>
+
+    <article class="component__card">
+        <h3 class="component__name">card</h3>
+        <div class="component__img">
+        <img
+            srcset="img/page-body__item-img.png"
+            src="img/page-body__item-img.png" alt="card img copy"/>
+        </div>
+        <div class="component__code">
+            Code Goes Here
+            <img
+            src="img/page-body__item-img.png" alt="card img copy"/>
+            <p>
+                <a href="#!">Foundry Æterna</a> <br>
+                <a href="#!">OPX Studio</a>
+            </p>
+        </div>
         </div>
     </article>
 </body>
