--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,12 @@ body {
     line-height: 1.5;
 }
 
+h3 {
+    font-weight: bold;
+    color: var(--white);
+    border: var(--white);
+}
+
 img {
     max-width: 100%;
     display: block;
