Page Button Copy

--- a/components/index.html
+++ b/components/index.html
@@ -99,6 +99,22 @@
                 <a href="#!">OPX Studio</a>
             </p>
         </div>
+    </article>
+
+    <article class="component__xternal button">
+        <h3 class="component__name">external link button</h3>
+        <div class="component__img">
+        <img
+            srcset="img/button-hover.png"
+            src="img/button-hover.png" alt="button copy"/>
+        </div>
+        <div class="component__code">
+            Code Goes Here
+            <div class="button__hover">
+            <p>
+                View project
+            </p>
+            </div>
         </div>
     </article>
 </body>
