--- a/css/main.css
+++ b/css/main.css
@@ -55,3 +55,18 @@ li {
 .button_header {
     font-size: 20px;
 }
+
+.button__hover {
+    color: var(--black);
+    background: var(--white);
+    border-radius: 50px;
+    padding: 2px 20px;
+    border: none;
+    width: 200px;
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+    text-align: center;
+    margin: 0;
+}
+
