--- a/css/main.css
+++ b/css/main.css
@@ -47,9 +47,10 @@ a {
 }
 
 li {
+    font-size: 20px;
     list-style-type: none;
     border-bottom: 1px solid var(--grey);
-    width: 600px;
+    width: 900px;
 }
 
 .button_header {
@@ -70,3 +71,31 @@ li {
     margin: 0;
 }
 
+.home {
+    font-family: Helvetica, sans-serif;
+}
+
+.home-wordmark {
+    color: var(--white);
+    font-size: 20px;
+    margin-top: 30px;
+    margin-left: 30px;
+}
+
+.home-nav {
+    margin-left: 500px;
+}
+
+.home-click {
+    display: flex;
+    gap: 785px;
+    margin-left: 540px;
+}
+
+.home-click__search {
+    font-size: 20px;
+}
+
+.home-click__about {
+    font-size: 20px;
+}
